--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-typical": "^0.1.3",
+    "simple-react-lightbox": "^3.6.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
